# komorebi

./: .gitignore  Cargo.toml  LICENSE
crates/komorebi_app/: Cargo.toml
crates/komorebi_app/src/: app.rs  lib.rs  plugin.rs  plugin_group.rs
crates/komorebi_core/: Cargo.toml
crates/komorebi_core/src/: app.rs  lib.rs  rendering.rs  shader.wgsl  texture.rs  window.rs
crates/komorebi_ecs/: Cargo.toml
crates/komorebi_ecs/src/: component.rs  lib.rs
crates/komorebi_ecs/src/storage/: join.rs  mod.rs  vec.rs
crates/komorebi_ecs/src/world/: mod.rs
crates/komorebi_render/: Cargo.toml
crates/komorebi_render/src/: lib.rs  rendering.rs
crates/komorebi_utils/: Cargo.toml
crates/komorebi_utils/src/: lib.rs
crates/komorebi_window/: Cargo.toml
crates/komorebi_window/src/: lib.rs  window.rs
crates/komorebi_winit/: Cargo.toml
crates/komorebi_winit/src/: lib.rs  winit_windows.rs
examples/app/: empty.rs  empty_defaults.rs
examples/wasm/: README.md  index.html
src/: app.rs  core.rs  default_plugins.rs  ecs.rs  lib.rs  main.rs  prelude.rs  storage.rs
