[package]
name = "komorebi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[workspace]
members = [
    "crates/*",
]

[dependencies]
komorebi_core = { path = "crates/komorebi_core", version = "0.1.0" }
komorebi_ecs = { path = "crates/komorebi_ecs", version = "0.1.0" }

[[example]]
name = "empty"
path = "examples/app/empty.rs"
