[package]
name = "komorebi_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# komorebi
komorebi_ecs = { path = "../komorebi_ecs", version = "0.1.0" }
komorebi_utils = { path = "../komorebi_utils", version = "0.1.0" }

# other
downcast-rs = "1.2.0"
