[package]
name = "komorebi_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
wgpu = "0.15"
cfg-if = "1"
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["time"] }
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
tracing-wasm = "0.2"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
