[package]
name = "komorebi_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
komorebi_utils = { path = "../komorebi_utils", version = "0.1.0" }

# other
wgpu = "0.15"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
winit = "0.28"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
