[package]
name = "komorebi_utils"
version = "0.1.0"
edition = "2021"
description = "A collection of utils for Komorebi Engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["time"] }
