[package]
name = "komorebi_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# komorebi
komorebi_utils = { path = "../komorebi_utils", version = "0.1.0" }

# other
winit = "0.28"
pollster = "0.2"
cfg-if = "1"
